# Lupos

./: .editorconfig  .gitattributes  .gitignore  AGENTS.MD  AGENTS.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  Makefile  README.md  SECURITY.md  TRANSLATION_PROGRESS.md  TRANSLATION_QUALITY_REPORT.md  build.rs  file_verdicts.tsv  plot_file_verdicts.py  rust-toolchain.toml
.cargo/: config.toml
.github/: CODEOWNERS
configs/: lupos_defconfig  tiny-base.config
scripts/: build-showcase.sh  lupos-console.py  lupos-vbox-beep.sh
src/: lib.rs
src/arch/: mod.rs
src/arch/x86/: mod.rs
src/block/: badblocks.rs  bcache.rs  bdev.rs  bfq_cgroup.rs  bfq_iosched.rs  bfq_wf2q.rs  bio.rs  bio_integrity.rs  bio_integrity_auto.rs  bio_integrity_fs.rs  blk_cgroup.rs  blk_cgroup_fc_appid.rs  blk_cgroup_rwstat.rs  blk_mq.rs  blk_settings.rs  block_device.rs  dm.rs  gendisk.rs  ioctl.rs  loop_dev.rs  mem.rs  mod.rs  request.rs  sched.rs
src/block/partitions/: gpt.rs  karma.rs  legacy.rs  mac.rs  mbr.rs  mod.rs  of.rs  osf.rs  sgi.rs  sun.rs  sysv68.rs  ultrix.rs
src/certs/: blacklist.rs  blacklist_hashes.rs  extract_cert.rs  mod.rs  system_keyring.rs
src/crypto/: 842.rs  aegis128_neon.rs  arc4.rs  blake2b.rs  blowfish_common.rs  blowfish_generic.rs  bpf_crypto_skcipher.rs  cast5_generic.rs  cast6_generic.rs  cast_common.rs  cbc.rs  cmac.rs  crc32.rs  crc32c.rs  dh_helper.rs  ecb.rs  ecc.rs  ecdh.rs  ecdh_helper.rs  fips.rs  kdf_sp800108.rs  lz4.rs  lz4hc.rs  lzo.rs  lzo_rle.rs  md4.rs  mod.rs  pcbc.rs  proc.rs  sm3.rs  sm4_generic.rs  xcbc.rs  xxhash_generic.rs
src/crypto/asymmetric_keys/: mod.rs  pkcs7_key_type.rs  selftest.rs  selftest_ecdsa.rs  signature.rs  x509_loader.rs
src/crypto/async_tx/: async_memcpy.rs  mod.rs
src/crypto/krb5/: mod.rs  rfc3962_aes.rs
src/docs/: abi-parity-validation-inventory.tsv  abi-parity-vendor-lock.tsv  linux-layout-exceptions.tsv  linux-layout-map.tsv
src/docs/abi-parity-suite/: arch-rootfs.tsv  blktests.tsv  final.tsv  kselftest.tsv  (+10 more)
src/efi/: mod.rs  vars.rs
src/fs/: anon_inode.rs  attr.rs  binfmt_elf.rs  binfmt_script.rs  char_dev.rs  dcache.rs  drop_caches.rs  eventfd.rs  eventpoll.rs  fanotify.rs  fcntl.rs  fdtable.rs  file.rs  file_table.rs  filesystems.rs  fs_dirent.rs  fs_pin.rs  fs_struct.rs  hugetlbfs.rs  inode.rs  inotify.rs  ioctl.rs  libfs.rs  mod.rs  mount.rs  mqueue.rs  namei.rs  namespace.rs  nsfs.rs  nullfs.rs  openat.rs  ops.rs  permission.rs  pidfd.rs  pipe.rs  proc_namespace.rs  procfs_abi.rs  read_write.rs  select.rs  seq_file_abi.rs  (+9 more)
src/include/: mod.rs
src/init/: boot.rs  boot_trace.rs  calibrate.rs  do_mounts.rs  do_mounts_initrd.rs  do_mounts_rd.rs  init_task.rs  initcall.rs  initramfs.rs  initramfs_test.rs  main.rs  mod.rs  noinitramfs.rs  rootfs.rs  start_kernel.rs  version.rs  version_timestamp.rs
src/io_uring/: advise.rs  alloc_cache.rs  bpf_filter.rs  bpf_ops.rs  cancel.rs  cmd_net.rs  cqe.rs  epoll.rs  eventfd.rs  fdinfo.rs  filetable.rs  fs.rs  futex.rs  io_wq.rs  kbuf.rs  linux_sources.rs  loop_op.rs  memmap.rs  mock_file.rs  mod.rs  msg_ring.rs  napi.rs  net.rs  nop.rs  notif.rs  opdef.rs  openclose.rs  ops.rs  params.rs  poll.rs  query.rs  register.rs  rsrc.rs  rw.rs  splice.rs  sqe.rs  sqpoll.rs  statx.rs  sync.rs  tctx.rs  (+9 more)
src/ipc/: compat.rs  ipc_sysctl.rs  mod.rs  mq_sysctl.rs  msg.rs  msgutil.rs  namespace.rs  sem.rs  shm.rs  syscall.rs  util.rs
src/kernel/: Kconfig  audit.rs  auditfilter.rs  backtracetest.rs  bounds.rs  bug.rs  capability.rs  cfi.rs  clone.rs  configs.rs  console.rs  cpuhotplug.rs  crash_core_test.rs  cred.rs  debug_trace.rs  dynamic_debug.rs  elfcorehdr.rs  error_injection.rs  exec.rs  exec_domain.rs  exit.rs  files.rs  fork.rs  groups.rs  irq_work.rs  kconfig.rs  kheaders.rs  ksyms_common.rs  kthread.rs  kunit.rs  mod.rs  module_signature.rs  notifier.rs  nsproxy.rs  params.rs  pid.rs  pid_namespace.rs  ptrace.rs  regset.rs  relay.rs  (+26 more)
src/lib/: argv_split.rs  ashldi3.rs  ashrdi3.rs  asn1_decoder.rs  asn1_encoder.rs  atomic64_test.rs  audit.rs  base64.rs  bcd.rs  bitmap.rs  bitrev.rs  bsearch.rs  bucket_locks.rs  bust_spinlocks.rs  check_signature.rs  checksum.rs  clz_ctz.rs  clz_tab.rs  cmdline.rs  cmpdi2.rs  cmpxchg_emu.rs  compat_audit.rs  ctype.rs  debug_info.rs  debug_locks.rs  dec_and_lock.rs  decompress.rs  devmem_is_allowed.rs  dhry_run.rs  dynamic_queue_limits.rs  earlycpio.rs  errname.rs  extable.rs  fault_inject_usercopy.rs  fdt.rs  fdt_addresses.rs  fdt_empty_tree.rs  fdt_ro.rs  fdt_rw.rs  fdt_strerror.rs  (+67 more)
src/linux_driver_abi/: hwmon.rs  i2c.rs  mod.rs  pnp.rs  storage_core.rs  thermal.rs
src/mm/: address_space.rs  backing_dev.rs  balloon.rs  bootmem_info.rs  bpf_memcontrol.rs  buddy.rs  cma_debug.rs  cma_sysfs.rs  damon.rs  debug.rs  debug_alloc.rs  debug_page_alloc.rs  debug_page_ref.rs  debug_vm_pgtable.rs  dmapool.rs  dmapool_test.rs  early_ioremap.rs  execmem.rs  fadvise.rs  fail_page_alloc.rs  failslab.rs  fault.rs  filemap.rs  folio_compat.rs  fork.rs  frame.rs  gup.rs  gup_test.rs  heap.rs  highmem.rs  huge.rs  init_mm.rs  interval_tree.rs  ioremap.rs  kasan_report_hw_tags.rs  kasan_report_sw_tags.rs  kasan_report_tags.rs  ksm.rs  list.rs  list_lru.rs  (+57 more)
src/net/: bridge.rs  ceph.rs  device.rs  devres.rs  fib.rs  ip.rs  link.rs  linux_parity.rs  linux_sources.rs  mod.rs  module_abi.rs  neighbour.rs  netfilter.rs  niche.rs  rtnetlink.rs  skbuff.rs  socket.rs  syscalls.rs  tcp.rs  udp.rs  uevent.rs  unix.rs  virtio_net.rs  wire.rs
src/rust/: exports.rs  mod.rs
src/scripts/: build_abi_parity_suites.sh  build_kconfig_tools.sh  build_userland.sh  localconfig.sh  localmodconfig.sh
src/security/: apparmor.rs  apparmorfs.rs  blobs.rs  cap_lsm.rs  certs.rs  dispatch.rs  hooks.rs  inode.rs  linux_sources.rs  lsm_list.rs  lsm_notifier.rs  min_addr.rs  mod.rs  platform_certs.rs  tomoyo.rs
src/usr/: gen_init_cpio.rs  initramfs_init.c  mod.rs
src/virt/: mod.rs
xtask/: Cargo.toml  README.md
xtask/src/: audit.rs  lib.rs  main.rs
xtask/tests/: boot.rs  linux_layout.rs
xtask/vendor_abi_probe/: .lupos_abi_layout_probe.o.cmd  Makefile  lupos_abi_layout_probe.c
(+1908 files in other folders)
